--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,9 +18,11 @@ services:
       - talk_rater_data:/var/lib/postgresql/data
     secrets:
       - db_password
+
   talk_rater_bot:
     depends_on:
       - talk_rater_db
+      - prometheus
     build:
       context: .
       dockerfile: Dockerfile
@@ -29,7 +31,7 @@ services:
       TG_API_TOKEN_USER_FILE: /run/secrets/tg_api_token_user
       TG_API_TOKEN_ADMIN_FILE: /run/secrets/tg_api_token_admin
       CONFIG_PATH_TG_BOT: /run/configs/config
-    # restart: unless-stopped
+    restart: unless-stopped
     networks:
       - backend
     configs:
@@ -38,6 +40,32 @@ services:
       - db_password
       - tg_api_token_admin
       - tg_api_token_user
+
+  prometheus:
+    image: docker.io/prom/prometheus:v2.51.2
+    container_name: prometheus
+    ports:
+      - "9090:9090"
+    command: "--config.file=/etc/prometheus/prometheus.yaml"
+    volumes:
+      - ./config/prometheus.yaml:/etc/prometheus/prometheus.yaml:ro
+      - prometheus-data:/prometheus
+    restart: unless-stopped
+    networks:
+      - backend
+
+  grafana:
+    depends_on:
+      - prometheus
+    image: docker.io/grafana/grafana-oss:10.4.2
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    volumes:
+      - grafana-data:/var/lib/grafana
+    restart: unless-stopped
+    networks:
+      - backend
 
 configs:
   config:
@@ -54,6 +82,13 @@ secrets:
 networks:
   backend:
     driver: bridge
+  output_world:
+    driver: host
 
 volumes:
   talk_rater_data:
+    driver: local
+  grafana-data:
+    driver: local
+  prometheus-data:
+    driver: local
