--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,27 +12,13 @@ services:
       POSTGRES_PASSWORD_FILE: /run/secrets/db_password.txt
 
       POSTGRES_DB: talk_rater_db
-    networks:
-      - backend
     volumes:
       - talk_rater_data:/var/lib/postgresql/data
       - ./secrets/db_password.txt:/run/secrets/db_password.txt
 
-  redis:
-    image: redis:7.2.4-alpine
-    command: sh -c 'redis-server --requirepass $$(cat /run/secrets/kv_db_password.txt)'
-    ports:
-      - '9001:6379'
-    networks:
-      - backend
-    volumes:
-      - redis_data:/data
-      - ./secrets/kv_db_password.txt:/run/secrets/kv_db_password.txt
-
   talk_rater_bot:
     depends_on:
       - talk_rater_db
-      - redis
     build:
       context: .
       dockerfile: Dockerfile
@@ -43,23 +29,16 @@ services:
       TG_API_TOKEN_ADMIN_FILE: /run/secrets/tg_api_token_admin.txt
       CONFIG_PATH_TG_BOT: /run/configs/local.yaml
 
-      PATH_LOGS: /tmp/logs.json
+      PATH_TMP: /tmp
       TEMPLATE_PATH: /templates
     # restart: unless-stopped
-    networks:
-      - backend
+    network_mode: host
     volumes:
       - ./tmp_files:/tmp
       - ./templates:/templates
       - ./secrets:/run/secrets
       - ./config:/run/configs
 
-networks:
-  backend:
-    driver: bridge
-
 volumes:
   talk_rater_data:
-    driver: local
-  redis_data:
     driver: local
