--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,22 +11,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
-        uses: actions/checkout@v4
+        uses: actions/checkout
       
       - name: Log in to Docker Hub
-        uses: docker/login-action@3.1.0
+        uses: docker/login-action
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       
       - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@5.5.1
+        uses: docker/metadata-action
         with:
           images: baizhumanov0alisher/talk_rater_bot
       
       - name: Build and push Docker image
-        uses: docker/build-push-action@5.3.0
+        uses: docker/build-push-action
         with:
           context: .
           push: true
